--- a/modules/user/config/user.settings.json
+++ b/modules/user/config/user.settings.json
@@ -8,5 +8,12 @@
     "account_status_cancelled": 0,
     "user_register": "admin_only",
     "user_signatures": 0,
-    "user_password_reset_timeout": 86400
+    "user_password_reset_timeout": 86400,
+    "user_pictures": 0, 
+    "user_picture_path": "pictures",
+    "user_picture_default": "",
+    "user_picture_style": "",
+    "user_picture_dimensions": "85x85",
+    "user_picture_file_size": 30,
+    "user_picture_guidelines": ""
 }
