--- a/modules/simpletest/config/simpletest.settings.json
+++ b/modules/simpletest/config/simpletest.settings.json
@@ -1,4 +1,5 @@
 {
+    "_config_name": "simpletest.settings",
     "simpletest_clear_results": 1,
     "simpletest_method": 1,
     "simpletest_password": "",
