Issue #1995996 by nod_: Update JSHint configuration.

--- a/.jshintrc
+++ b/.jshintrc
@@ -7,8 +7,10 @@
   "latedef"   : true,
   "newcap"    : true,
   "noarg"     : true,
+  "strict"    : true,
   "trailing"  : true,
   "undef"     : true,
+  "unused"    : "vars",
   "predef"    : [
     "Backdrop",
     "Drupal",
