Issue #281: Support for BACKDROP_SETTINGS as an override for settings.php configuration.

--- a/misc/travis-ci/vhost.conf
+++ b/misc/travis-ci/vhost.conf
@@ -21,6 +21,10 @@
     AllowOverride All
     Order allow,deny
     Allow from all
+
+    # Populate $_SERVER['BACKDROP_SETTINGS']. See backdrop_settings_initialize()
+    # and the test in bootstrap.test.
+    SetEnv BACKDROP_SETTINGS {"databases":{"test_database":{"default":{"driver":"mysql","database":"test_database","username":"test_username","password":"test_password","host":"test_host"}}},"settings":{"test_setting":"foo"}}
   </Directory>
 
   # Wire up Apache to use Travis CI's php-fpm.
